--- a/src/Components/navbar.css
+++ b/src/Components/navbar.css
@@ -4,7 +4,7 @@
 .nav-banner{
     height: 550vh;
     width: 100%;
-    background-color: rgb(39, 39, 45);
+    /* background-color: rgb(39, 39, 45); */
     z-index: -1;
 }
 
